--- a/architecture-diagram.html
+++ b/architecture-diagram.html
@@ -151,16 +151,15 @@ th { background: #000; color: #fff; font-weight: bold; }
       <div class="mod">
         <div class="mod-name">strategies.py</div>
         StrategySeeds<br>
-        42개 template-based generators<br>
-        momentum / mean_reversion /<br>
-        value / quality / volatility /<br>
-        <strong>+ 6 novel anti-correlation:</strong><br>
-        <span class="tiny">cross_field_residual,<br>
-        institution_flow_signal,<br>
-        option_implied_momentum,<br>
-        analyst_revision_divergence,<br>
-        risk_adjusted_value,<br>
-        composite_rank_spread</span>
+        61개 template-based generators<br>
+        <strong>25 academic factors (5×):</strong><br>
+        <span class="tiny">Novy-Marx, Sloan, Ang,<br>
+        Amihud, Hou-Xue-Zhang,<br>
+        AQR QMJ, Moskowitz, Bali...</span><br>
+        <strong>12 IS-friendly (4×)</strong><br>
+        <strong>11 rare-field (3×)</strong><br>
+        <strong>7 complex (2×), 6 basic</strong><br>
+        <span class="tiny">Total pool: 226 (weighted)</span>
       </div>
       <div class="mod">
         <div class="mod-name">config.py</div>
@@ -1541,10 +1540,10 @@ th { background: #000; color: #fff; font-weight: bold; }
 <!-- FOOTER -->
 <!-- ═══════════════════════════════════════════════════════════ -->
 <div style="border-top: 2px solid #000; margin-top: 20px; padding-top: 8px; font-size: 9px; color: #666; text-align: center;">
-  WorldQuant BRAIN Alpha Evolution v4 — System Architecture Diagram<br>
+  WorldQuant BRAIN Alpha Evolution v5.8 — System Architecture Diagram<br>
   Generated for internal reference. All modules: main.py, evolution.py, alpha_ast.py, brain_api.py, evaluator.py,
-  config.py, strategies.py, pattern_learner.py, surrogate.py, field_explorer.py, dashboard.py, monitor.py<br>
-  Island Model (4) + SHADE + MAP-Elites (10×5) + NSGA-II + ε-Lexicase + UCB1 AOS (10 ops) + Surrogate + Pattern Learner + Field Explorer
+  config.py, strategies.py, pattern_learner.py, surrogate.py, field_explorer.py, dashboard.py, llm_seed.py<br>
+  Island Model (4) + SHADE + MAP-Elites (10×5) + NSGA-II + ε-Lexicase + UCB1 AOS (8 ops) + Surrogate + Pattern Learner + Field Explorer + 25 Academic Factor Seeds
 </div>
 
 </body>
